# ZPR

./: .gitignore  CMakeLists.txt  README.md  build.sh  install
include/: CompareFiles  TWidget.hpp  button.hpp  colors.hpp  legend.hpp  mainwindow.hpp  mergedWindow.hpp  namespaces.hpp
include/compare_files/: app.hpp  block.hpp  change.hpp  comparator.hpp  file.hpp  kmp.hpp  nw.hpp  text.hpp  textdiff.hpp
src/: main.cpp
src/app/: CMakeLists.txt  TWidget.cpp  button.cpp  legend.cpp  mainwindow.cpp  mergedWindow.cpp
src/app/mainwindow/: mainwindow.cpp
src/compare_files/: CMakeLists.txt  app.cpp  block.cpp  change.cpp  comparator.cpp  file.cpp  kmp.cpp  nw.cpp  textdiff.cpp
src/compare_files/block/: CMakeLists.txt  block.cpp
src/compare_files/cos/: CMakeLists.txt  cos.cpp
src/compare_files/file/: CMakeLists.txt  file.cpp
src/compare_files/kmp/: CMakeLists.txt  kmp.cpp
src/compare_files/text_diff/: CMakeLists.txt
test/: paragraphs.txt  paragraphs_v2.txt  test.cpp
test/text_files/: letters.txt  letters_v2.txt  paragraphs.txt  test_file.txt
